[gd_scene load_steps=7 format=3 uid="uid://dq5puylm0poa6"]

[ext_resource type="Script" path="res://source/menus/sub/start_menu.gd" id="1_5nbci"]
[ext_resource type="FontFile" uid="uid://dyhi86j3ru5rs" path="res://assets/fonts/vcr.ttf" id="2_ha5k5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7em1s"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vihua"]
bg_color = Color(1, 1, 1, 0.709804)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ytma4"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wo7gl"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="start_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5nbci")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.627451)

[node name="diff_buttons" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="normal_diff" type="Button" parent="diff_buttons"]
layout_mode = 0
offset_left = 128.0
offset_top = 320.0
offset_right = 376.0
offset_bottom = 384.0
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_ha5k5")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_7em1s")
theme_override_styles/hover = SubResource("StyleBoxFlat_vihua")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ytma4")
theme_override_styles/normal = SubResource("StyleBoxFlat_wo7gl")
text = "NORMAL"
alignment = 0

[node name="hard_diff" type="Button" parent="diff_buttons"]
layout_mode = 0
offset_left = 128.0
offset_top = 384.0
offset_right = 376.0
offset_bottom = 448.0
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_ha5k5")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_7em1s")
theme_override_styles/hover = SubResource("StyleBoxFlat_vihua")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ytma4")
theme_override_styles/normal = SubResource("StyleBoxFlat_wo7gl")
text = "HARD"
alignment = 0

[node name="harsh_diff" type="Button" parent="diff_buttons"]
layout_mode = 0
offset_left = 128.0
offset_top = 448.0
offset_right = 376.0
offset_bottom = 512.0
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_ha5k5")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_7em1s")
theme_override_styles/hover = SubResource("StyleBoxFlat_vihua")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ytma4")
theme_override_styles/normal = SubResource("StyleBoxFlat_wo7gl")
text = "HARSH"
alignment = 0

[node name="play" type="Button" parent="."]
layout_mode = 0
offset_left = 968.0
offset_top = 576.0
offset_right = 1216.0
offset_bottom = 640.0
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_ha5k5")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_7em1s")
theme_override_styles/hover = SubResource("StyleBoxFlat_vihua")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ytma4")
theme_override_styles/normal = SubResource("StyleBoxFlat_wo7gl")
text = "PLAY"
alignment = 2

[node name="diff_text" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 512.0
offset_right = 775.0
offset_bottom = 609.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_ha5k5")
theme_override_font_sizes/font_size = 24
text = "DIFFICULTY SELECTED: NORMAL

Start with full supplies, sickness is reduced,
and less fails"

[connection signal="pressed" from="diff_buttons/normal_diff" to="." method="diff_selected" binds= ["normal"]]
[connection signal="pressed" from="diff_buttons/hard_diff" to="." method="diff_selected" binds= ["hard"]]
[connection signal="pressed" from="diff_buttons/harsh_diff" to="." method="diff_selected" binds= ["harsh"]]
[connection signal="pressed" from="play" to="." method="start_game"]
